--- a/sample-app/src/main/res/layout/main_activity.xml
+++ b/sample-app/src/main/res/layout/main_activity.xml
@@ -29,6 +29,9 @@
       android:id="@+id/recycler_view"
       android:layout_width="0dp"
       android:layout_height="0dp"
+      android:fadeScrollbars="false"
+      android:scrollbarAlwaysDrawVerticalTrack="true"
+      android:scrollbars="vertical"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/options"
